# ML_ops_desiciontree

./: README.md  pyproject.toml
config/: .pre-commit-config.yaml  .pre.commit-config.yaml
model/: finalized_model.sav  infer.py  train.py
